--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+	<div class="card">
+		<date class="date">6 oct 2023</date>
+		<div class="division">
+		<h1 class="heading">HTML Syntax</h1>
+		<p class="para">The syntax of a language is how it works. How to actually write it. Learn HTML</p>
+		<p class="skill">HTML</p>
+		</div>
+	</div>
+	<div class="card">
+		<date class="date">6 oct 2023</date>
+		<div class="division">
+		<h1 class="heading">HTML Syntax</h1>
+		<p class="para">The syntax of a language is how it works. How to actually write it. Learn HTML</p>
+		<p class="skill">HTML</p>
+		</div>
+	</div>
+	<div class="card">
+		<date class="date">6 oct 2023</date>
+		<div class="division">
+		<h1 class="heading">HTML Syntax</h1>
+		<p class="para">The syntax of a language is how it works. How to actually write it. Learn HTML</p>
+		<p class="skill">HTML</p>
+		</div>
+	</div>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
