--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
+	<div class="cards-wrapper">
 	<div class="card">
 		<date class="date">6 oct 2023</date>
 		<div class="division">
